# apache-lens

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: cli.rs  main.rs
src/commands/: export.rs  filter.rs  init.rs  mod.rs  parse.rs  stats.rs  status.rs  top.rs
src/config/: mod.rs
src/core/: models.rs  parser.rs
src/discovery/: mod.rs
src/i18n/: en.rs  es.rs  messages.rs  mod.rs
