[package]
name = "applogs"
version = "0.1.0"
edition = "2021"
description = "CLI tool for analyzing Apache access logs"
license = "MIT-NC"
repository = "https://github.com/pasanchezdev/apache-lens"
keywords = ["apache", "logs", "cli", "analytics"]
categories = ["command-line-utilities"]

[dependencies]
clap       = { version = "4", features = ["derive"] }
regex      = "1"
chrono     = { version = "0.4", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
toml       = "0.8"
dirs-next  = "2"
walkdir    = "2"

[profile.release]
opt-level = 3
